syntax = "proto3";

package vimonade;

service VimonadeService {
  rpc Copy(CopyRequest) returns (CopyResponse) {}
  rpc Paste(PasteRequest) returns (PasteResponse) {}
  rpc Send(stream SendFileRequest) returns (SendFileResponse) {};
  // rpc Sync(stream FileRequests) returns (stream FileResponses) {};
}

message CopyRequest {
  string value = 1;
}

message CopyResponse {}

message PasteRequest {
  string value = 1;
}

message PasteResponse {}

// message FileRequests {
  // repeated SendFileRequest request = 1;
// }
//
// message FileResponses {
  // repeated SendFileResponse response = 1;
// }

message SendFileRequest {
  oneof data {
    FileInfo info = 1;
    bytes chunk_data = 2;
  };
}

message SendFileResponse {
  string name = 1;
  uint32 size = 2;
}

message FileInfo {
  string name = 1;
  string file_type = 2;
}
